# aimodel-upgrade-analyzer

./: .gitignore  README.md  SPEC.md  pyproject.toml
model_upgrade_analyzer/: __init__.py  cli.py  config.py
model_upgrade_analyzer/analysis/: compatibility_rules.py  correlator.py  recommendation_engine.py  risk_scoring.py  upgrade_impact.py
model_upgrade_analyzer/ingest/: model_card_loader.py  modeliq_loader.py  repo_inventory.py
model_upgrade_analyzer/models/: domain.py
model_upgrade_analyzer/reporting/: html_report.py  json_report.py  markdown_report.py  pptx_export.py
model_upgrade_analyzer/scanners/: ast_helpers.py  code_scanner.py  config_scanner.py  deployment_type.py  pattern_library.py  prompt_scanner.py
model_upgrade_analyzer/utils/: dates.py  files.py  logging.py  text.py
scripts/: Find-RetiringAzureAIDeployments.ps1  Update-ModelRetirements.ps1
tests/: test_code_scanner.py  test_correlator.py  test_deployment_type.py  test_modeliq_loader.py  test_prompt_scanner.py  test_risk_scoring.py
